fix some files